// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<InputButton /> renders 1`] = `
<Button
  action={[Function]}
  className={undefined}
  text="1"
/>
`;

exports[`<InputButton /> renders with className 1`] = `
<Button
  action={[Function]}
  className={
    Object {
      "data-css-aori8y": "",
    }
  }
  text="1"
/>
`;
